Anonymous was allowed to sign up using email and password
